crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__folding_range__tests__folding_section_comments_basic.snap
---
source: crates/ark-lsp-core/src/lsp/folding_range.rs
assertion_line: 409
expression: "test_folding_range(\"\n# First section ----\na\nb\n\n# Second section ----\nc\nd\n\n# %% Chunk section (jupyter-style)\ne\nf\n\n#+ Chunk section (knitr-style)\ng\n# + This is not a chunk\nh\n\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 4,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 5,
        start_character: None,
        end_line: 17,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 9,
        start_character: None,
        end_line: 12,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 13,
        start_character: None,
        end_line: 17,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
