crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__folding_range__tests__folding_unterminated.snap
---
source: crates/ark-lsp-core/src/lsp/folding_range.rs
assertion_line: 722
expression: "format!(\"Expected error: {}\", e)"
---
"Expected error: Parse error"
